<resources>
    <string name="app_name">Bgs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_games">Games</string>
    <string name="menu_my_games">My Games</string>
    <string name="menu_groups">Groups</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">"Sign in"</string>
    <string name="user">User:</string>
    <string name="enter_login">enter login</string>
    <string name="password">Password:</string>
    <string name="enter_password">enter password</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTRATION</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="menu_my_friends">My friends</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_head">HeadActivity</string>
    <string name="title_activity_nav_bot">NavBotActivity</string>
    <string name="menu_messages">Messages</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="delete">Delete</string>
    <string name="Meetings">Meetings</string>
    <string name="creator">Creator</string>
    <string name="date">Date</string>
    <string name="members">Members</string>
    <string name="take_part">Take Part</string>
    <string name="menu_my_meetings">My Meetings</string>
    <string name="dateOfBirth">Date of Birthday</string>
    <string name="add">Add</string>
    <string name="deleteGame">Delete</string>
    <string name="done">Done</string>
    <string name="base_url">http://192.168.1.64:8080/mobile/</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="createMeeting">Create Meeting</string>
    <string name="gameItem">Game item</string>
    <string name="cancel">Cancel</string>

</resources>
