<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_my_games"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_my_games" />

    <item
        android:id="@+id/item_my_meetings"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/menu_my_meetings" />

    <item
        android:id="@+id/item_games"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_games" />

    <item
        android:id="@+id/item_messages"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_messages" />

    <item
        android:id="@+id/item_my_friends"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/menu_my_friends" />

</menu>
