<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/item_my_games">

    <fragment
        android:id="@+id/item_my_games"
        android:name="com.dzmitrykavalioum.bgs.ui.mygames.MyGamesFragment"
        android:label="@string/menu_my_games"
        tools:layout="@layout/fragment_my_games" />

    <fragment
        android:id="@+id/item_my_friends"
        android:name="com.dzmitrykavalioum.bgs.ui.myfriends.MyFriendsFragment"
        android:label="@string/menu_my_friends"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/item_games"
        android:name="com.dzmitrykavalioum.bgs.ui.games.GamesFragment"
        android:label="@string/menu_games"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/item_messages"
        android:name="com.dzmitrykavalioum.bgs.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/messages_fragment"/>
</navigation>
