<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="64dp"
        android:text="@string/user"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_text"
        android:layout_marginLeft="43dp"
        android:layout_marginBottom="-1dp"
        android:layout_toRightOf="@+id/user_text"
        android:hint="@string/enter_login">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_text"
        android:layout_alignLeft="@+id/user_text"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <ProgressBar
        android:id="@+id/pb_loading_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_user"
        android:layout_alignRight="@+id/edit_user"
        android:layout_alignBottom="@+id/password_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="-8dp"
        android:layout_marginBottom="0dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_alignLeft="@+id/user_text"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="96dp"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_alignEnd="@+id/edit_password"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="96dp"
        android:text="@string/register" />


</RelativeLayout>