<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createmeeting.CreateMeetingActivity">

    <TextView
        android:id="@+id/tv_game_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25dp"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="22dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etLocationMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/location"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="63dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_meeting"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etDateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:editable="false"
        android:focusable="false"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/etLocationMeeting"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/btnSaveMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/etDateMeeting"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp" />

    <Button
        android:id="@+id/btnCancelCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="64dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/btnSaveMeeting"
        app:layout_constraintTop_toBottomOf="@+id/etDateMeeting"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>